--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -41,7 +41,7 @@
     <div id="headerwrap" id="home" name="home">
     <header class="clearfix">
       <div class="col-lg-5" id="intro">
-          <h2>Dermatology in<br>Watchung, NJ</h2>
+          <h2>Dermatology ~ Dermatological Surgery in<br>Watchung, NJ</h2>
         </div>
       </header>     
     </div>
@@ -51,13 +51,13 @@
     <div class="row">
       <div class="col-lg-6 callout">
         <i class="fa fa-plus-square fa-4x"></i>
-        <h2>Insurance</h2>
+        <h2>Registration and Insurance</h2>
         <p>Dot Theme is powered by Bootstrap 3. The incredible Mobile First Framework is the best option to run your website. </p>
       </div><!-- col-lg-4 -->
         
       <div class="col-lg-6 callout">
         <i class="fa fa-clipboard fa-4x"></i>
-        <h2>Medical History</h2>
+        <h2>Medical Questionnaire</h2>
         <p>You can use this theme with your iPhone, iPad or MacBook Pro. This theme is retina ready and that is awesome. </p>
       </div><!-- col-lg-4 --> 
       
@@ -169,19 +169,19 @@
     <div class="row">
     <br>
     <br>
-    <br>
-      <h1 class="centered">THANKS FOR VISITING US</h1>
+      <h1 class="centered">Please Call to Schedule an Appointment</h1>
       <hr>
-      <div class="col-lg-4">
-        <h3>Contact Information</h3>
-        <p><span class="icon icon-home"></span> Some Address 987, NY<br/>
-          <span class="icon icon-phone"></span> +34 9884 4893 <br/>
-          <span class="icon icon-mobile"></span> +34 59855 9853 <br/>
-          <span class="icon icon-envelop"></span> <a href="#"> dotagency@fakename.com</a> <br/>
-          <span class="icon icon-twitter"></span> <a href="#"> @dotagency </a> <br/>
-          <span class="icon icon-facebook"></span> <a href="#"> DotAgency </a> <br/>
-        </p>
-      </div><!-- col -->
+      <div class="centered">
+        <div class="col-lg-12">
+          <p>
+            40 Stirling Road Suite 203<br/>
+            Watchung, NJ 07069</a> <br/>
+            <span class="icon icon-phone"></span> 908 753 4144 <br/>
+            <strong>Fax</strong> 908 753 3743 <br/>
+            
+          </p>
+        </div><!-- col -->
+      </div>
       
 
 
